--- a/Sistema de Controle de Alunos/Sistema de Controle de Alunos.csproj
+++ b/Sistema de Controle de Alunos/Sistema de Controle de Alunos.csproj
@@ -199,9 +199,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Classes\Utilidades.cs" />
+    <Compile Include="Controllers\APIController\UsuariosController.cs" />
+    <Compile Include="Controllers\Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Controllers\HomeController.cs" />
+    <Compile Include="Controllers\Controllers\ManageController.cs" />
+    <Compile Include="Controllers\Controllers\UsuariosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -214,6 +217,8 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Notas.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\UsuarioSenha.cs" />
+    <Compile Include="Models\UsuarioView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -274,9 +279,15 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Usuarios\Create.cshtml" />
+    <Content Include="Views\Usuarios\Delete.cshtml" />
+    <Content Include="Views\Usuarios\Details.cshtml" />
+    <Content Include="Views\Usuarios\Edit.cshtml" />
+    <Content Include="Views\Usuarios\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Fotos\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
